# ZJU-21FA-3D-CAD

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  clip2tri.patch  exprtk.patch
cmake/: get_cpm.cmake
data/: loop1.txt  loop2.txt  loop3.txt  mod2.txt  square.txt
include/: common.hpp  euler_ops.hpp  halfedge.hpp  sweep_expr.hpp  sweeping.hpp  triangulate.hpp
src/: main.cpp  sweep_expr.cpp  sweeping.cpp  triangulate.cpp
sweep/: id.txt  pl.txt  rotate.txt  rotate2.txt  scale.txt  sin.txt
